<?php

declare(strict_types=1);

namespace DoctrineMigrations;

use Doctrine\DBAL\Schema\Schema;
use Doctrine\Migrations\AbstractMigration;

/**
 * Auto-generated Migration: Please modify to your needs!
 */
final class Version20260321180031 extends AbstractMigration
{
    public function getDescription(): string
    {
        return '';
    }

    public function up(Schema $schema): void
    {
        // this up() migration is auto-generated, please modify it to your needs
        $this->addSql('CREATE TABLE character (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, name VARCHAR(255) NOT NULL, description TEXT DEFAULT NULL, status SMALLINT NOT NULL, link VARCHAR(255) DEFAULT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, user_id INT NOT NULL, campaign_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_937AB0349D86650F ON character (user_id)');
        $this->addSql('CREATE INDEX IDX_937AB0343141FA38 ON character (campaign_id)');
        $this->addSql('ALTER TABLE character ADD CONSTRAINT FK_937AB0349D86650F FOREIGN KEY (user_id) REFERENCES "user" (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE character ADD CONSTRAINT FK_937AB0343141FA38 FOREIGN KEY (campaign_id) REFERENCES campaign (id) NOT DEFERRABLE');
    }

    public function down(Schema $schema): void
    {
        // this down() migration is auto-generated, please modify it to your needs
        $this->addSql('ALTER TABLE character DROP CONSTRAINT FK_937AB0349D86650F');
        $this->addSql('ALTER TABLE character DROP CONSTRAINT FK_937AB0343141FA38');
        $this->addSql('DROP TABLE character');
    }
}
