<?php

declare(strict_types=1);

namespace DoctrineMigrations;

use Doctrine\DBAL\Schema\Schema;
use Doctrine\Migrations\AbstractMigration;

/**
 * Auto-generated Migration: Please modify to your needs!
 */
final class Version20260323111508 extends AbstractMigration
{
    public function getDescription(): string
    {
        return '';
    }

    public function up(Schema $schema): void
    {
        // this up() migration is auto-generated, please modify it to your needs
        $this->addSql('CREATE TABLE item (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, title VARCHAR(255) NOT NULL, description TEXT DEFAULT NULL, link VARCHAR(255) DEFAULT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, author_id INT NOT NULL, character_id INT DEFAULT NULL, campaign_id INT DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_1F1B251EF675F31B ON item (author_id)');
        $this->addSql('CREATE INDEX IDX_1F1B251E81877935 ON item (character_id)');
        $this->addSql('CREATE INDEX IDX_1F1B251E3141FA38 ON item (campaign_id)');
        $this->addSql('ALTER TABLE item ADD CONSTRAINT FK_1F1B251EF675F31B FOREIGN KEY (author_id) REFERENCES "user" (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE item ADD CONSTRAINT FK_1F1B251E81877935 FOREIGN KEY (character_id) REFERENCES character (id)');
        $this->addSql('ALTER TABLE item ADD CONSTRAINT FK_1F1B251E3141FA38 FOREIGN KEY (campaign_id) REFERENCES campaign (id)');
    }

    public function down(Schema $schema): void
    {
        // this down() migration is auto-generated, please modify it to your needs
        $this->addSql('ALTER TABLE item DROP CONSTRAINT FK_1F1B251EF675F31B');
        $this->addSql('ALTER TABLE item DROP CONSTRAINT FK_1F1B251E81877935');
        $this->addSql('ALTER TABLE item DROP CONSTRAINT FK_1F1B251E3141FA38');
        $this->addSql('DROP TABLE item');
    }
}
