<?php

declare(strict_types=1);

namespace DoctrineMigrations;

use Doctrine\DBAL\Schema\Schema;
use Doctrine\Migrations\AbstractMigration;

/**
 * Auto-generated Migration: Please modify to your needs!
 */
final class Version20260323122842 extends AbstractMigration
{
    public function getDescription(): string
    {
        return '';
    }

    public function up(Schema $schema): void
    {
        // this up() migration is auto-generated, please modify it to your needs
        $this->addSql('CREATE TABLE campaign_invite (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, sender_id INT NOT NULL, recipient_id INT NOT NULL, campaign_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_ABC4F640F624B39D ON campaign_invite (sender_id)');
        $this->addSql('CREATE INDEX IDX_ABC4F640E92F8F78 ON campaign_invite (recipient_id)');
        $this->addSql('CREATE INDEX IDX_ABC4F640F639F774 ON campaign_invite (campaign_id)');
        $this->addSql('ALTER TABLE campaign_invite ADD CONSTRAINT FK_ABC4F640F624B39D FOREIGN KEY (sender_id) REFERENCES "user" (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE campaign_invite ADD CONSTRAINT FK_ABC4F640E92F8F78 FOREIGN KEY (recipient_id) REFERENCES "user" (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE campaign_invite ADD CONSTRAINT FK_ABC4F640F639F774 FOREIGN KEY (campaign_id) REFERENCES campaign (id) NOT DEFERRABLE');
        $this->addSql('ALTER INDEX idx_1f1512dd9d86650f RENAME TO IDX_1F1512DDA76ED395');
        $this->addSql('ALTER INDEX idx_568eb1889d86650f RENAME TO IDX_568EB188A76ED395');
        $this->addSql('ALTER INDEX idx_568eb1883141fa38 RENAME TO IDX_568EB188F639F774');
        $this->addSql('ALTER INDEX idx_937ab0349d86650f RENAME TO IDX_937AB034A76ED395');
        $this->addSql('ALTER INDEX idx_937ab0343141fa38 RENAME TO IDX_937AB034F639F774');
        $this->addSql('ALTER INDEX idx_1f1b251e81877935 RENAME TO IDX_1F1B251E1136BE75');
        $this->addSql('ALTER INDEX idx_1f1b251e3141fa38 RENAME TO IDX_1F1B251EF639F774');
    }

    public function down(Schema $schema): void
    {
        // this down() migration is auto-generated, please modify it to your needs
        $this->addSql('ALTER TABLE campaign_invite DROP CONSTRAINT FK_ABC4F640F624B39D');
        $this->addSql('ALTER TABLE campaign_invite DROP CONSTRAINT FK_ABC4F640E92F8F78');
        $this->addSql('ALTER TABLE campaign_invite DROP CONSTRAINT FK_ABC4F640F639F774');
        $this->addSql('DROP TABLE campaign_invite');
        $this->addSql('ALTER INDEX idx_1f1512dda76ed395 RENAME TO idx_1f1512dd9d86650f');
        $this->addSql('ALTER INDEX idx_568eb188f639f774 RENAME TO idx_568eb1883141fa38');
        $this->addSql('ALTER INDEX idx_568eb188a76ed395 RENAME TO idx_568eb1889d86650f');
        $this->addSql('ALTER INDEX idx_937ab034f639f774 RENAME TO idx_937ab0343141fa38');
        $this->addSql('ALTER INDEX idx_937ab034a76ed395 RENAME TO idx_937ab0349d86650f');
        $this->addSql('ALTER INDEX idx_1f1b251ef639f774 RENAME TO idx_1f1b251e3141fa38');
        $this->addSql('ALTER INDEX idx_1f1b251e1136be75 RENAME TO idx_1f1b251e81877935');
    }
}
